--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -11,6 +11,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+            <li class="active"><a href="{{ url_for('profile') }}">Profile</a></li>
             <li class="active"><a href="{{ url_for('home') }}">Home</a></li>
             <li><a href="{{ url_for('about') }}">About</a></li>
           </ul>
